--- a/src/index.njk
+++ b/src/index.njk
@@ -79,7 +79,7 @@
 			<div class="flex pa3 flex-row justify-between align-items-center w-100">
 				<div class="d-block w-100 flex flex-row justify-end">
 					<button
-						id="nav-light"
+						id="lightswitch"
 						class="button-reset bg-transparent b--none pa0 btn-mode"
 						type="button"
 						aria-label="Toggle light/dark mode"
@@ -119,12 +119,14 @@
 							tabindex="1"
 							name="recipient"
 							class="input input-reset tagify pv3 h-100 db w-100 bg-transparent b--none pl2 pl3-ns f5"
-							type="text"
+							type="email"
 							autofocus
+                            multiple
 						/>
 						<div class="mr2 mr3-ns">
 							<a
-								class="f5-ns f7 fw6 br2 ph2 tdn tc pv2 dib btn-sm ccButton"
+                                id="cc-button"
+								class="f5-ns f7 fw6 br2 ph2 tdn tc pv2 dib btn-sm"
 								href="javascript:void(0);"
 								tabindex="6"
 								>Cc:</a
@@ -132,7 +134,8 @@
 						</div>
 						<div class="mr2 mr3-ns">
 							<a
-								class="f5-ns f7 fw6 br2 ph2 tdn tc pv2 dib btn-sm bccButton"
+                                id="bcc-button"
+								class="f5-ns f7 fw6 br2 ph2 tdn tc pv2 dib btn-sm"
 								href="javascript:void(0);"
 								tabindex="7"
 								>Bcc:</a
@@ -203,18 +206,8 @@
 				<div
 					class="output mailto-link white bg-black br-pill b b--white flex-row items-center justify-between"
 				>
-					<div class="mailto-text">
-						<strong>mailto:</strong
-						><span id="recipientOutput" class="recipientOutput"></span
-						><span id="ccLabel" class="label">cc=</span
-						><span class="ccOutput"></span
-						><span id="bccLabel" class="label">bcc=</span
-						><span class="bccOutput"></span
-						><span id="subjectLabel" class="label">subject=</span
-						><span class="subjectOutput"></span
-						><span id="bodyLabel" class="label">body=</span
-						><span class="bodyOutput"></span>
-					</div>
+					<span class="mailto-text">
+					</span>
 					<a class="btn btn-md fw6 ml2 copyCode" href="javascript:void(0);"
 						>Copy</a
 					>
