--- a/src/index.njk
+++ b/src/index.njk
@@ -152,7 +152,8 @@
 								name="cc"
 								tabindex="2"
 								class="input input-reset pv3 h-100 db w-100 bg-transparent b--none pl2 pl3-ns f5"
-								type="text"
+								type="email"
+                                multiple
 							/>
 						</div>
 					</div>
@@ -166,7 +167,8 @@
 								name="bcc"
 								tabindex="3"
 								class="input input-reset pv3 h-100 db w-100 bg-transparent b--none pl2 pl3-ns f5"
-								type="text"
+								type="email"
+                                multiple
 							/>
 						</div>
 					</div>
@@ -185,7 +187,6 @@
 						/>
 					</div>
 				</div>
-				<!-- /bg-gray-10 -->
 				<div class="email-body w-100 pt2 pt3-ns">
 					<label for="body" class="f5-ns f6 gray-40 fw6 pl2 pl3-ns db"
 						>Body:</label
